{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 33,
  "lineage": "a5758c2b-1da9-329b-5b5a-6e5169dd5d28",
  "resources": [
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260826",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/zones/us-central1-a/disks/test-vm-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-506723/zones/us-central1-a/instances/test-vm-0",
            "instance_id": "1113188271252454064",
            "label_fingerprint": "oPg0Xt09Q1c=",
            "labels": {
              "name": "test-vm-0"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "qi2ih78rLQM=",
            "name": "test-vm-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.113.82.244",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/global/networks/vois-network",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/regions/us-central1/subnetworks/vois-subnet",
                "subnetwork_project": "terraform-gcp-506723"
              }
            ],
            "project": "terraform-gcp-506723",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/zones/us-central1-a/instances/test-vm-0",
            "service_account": [
              {
                "email": "test-vm-sa@terraform-gcp-506723.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "test-vm"
            ],
            "tags_fingerprint": "XDck4GXW3HA=",
            "timeouts": {
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm_sa.google_project_iam_member.iam_member",
            "module.vm_sa.google_service_account.account",
            "module.vpc.google_compute_firewall.fw_allow_all_egress",
            "module.vpc.google_compute_firewall.fw_allow_ssh",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-08-26T17:10:05.581-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-506723/global/firewalls/allow-all-egress",
            "log_config": [],
            "name": "allow-all-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/global/networks/vois-network",
            "priority": 1000,
            "project": "terraform-gcp-506723",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/global/firewalls/allow-all-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-26T17:10:05.339-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-506723/global/firewalls/allow-ssh-iap",
            "log_config": [],
            "name": "allow-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/global/networks/vois-network",
            "priority": 1000,
            "project": "terraform-gcp-506723",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/global/firewalls/allow-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-506723/global/networks/vois-network",
            "mtu": 0,
            "name": "vois-network",
            "project": "terraform-gcp-506723",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/global/networks/vois-network",
            "timeouts": {
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-08-26T20:53:39.636-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/terraform-gcp-506723/regions/us-central1/routers/vois-network-router",
            "name": "vois-network-router",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/global/networks/vois-network",
            "project": "terraform-gcp-506723",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/regions/us-central1/routers/vois-network-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "terraform-gcp-506723/us-central1/vois-network-router/vois-network-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "vois-network-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "terraform-gcp-506723",
            "region": "us-central1",
            "router": "vois-network-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-08-26T17:10:06.879-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-gcp-506723/regions/us-central1/subnetworks/vois-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "vois-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/global/networks/vois-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-506723",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "gke-vois-cluster-services-d6f4b4e6"
              },
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "gke-vois-cluster-pods-d6f4b4e6"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-506723/regions/us-central1/subnetworks/vois-subnet",
            "stack_type": "IPV4_ONLY",
            "timeouts": {
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}